[gd_scene load_steps=56 format=2]

[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Idle/1.png" type="Texture" id=1]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Hit/2.png" type="Texture" id=2]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/1.png" type="Texture" id=3]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/3.png" type="Texture" id=4]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/2.png" type="Texture" id=5]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Bite/1.png" type="Texture" id=6]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Hit/4.png" type="Texture" id=7]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/5.png" type="Texture" id=8]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Bite/5.png" type="Texture" id=9]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/6.png" type="Texture" id=10]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Hit/3.png" type="Texture" id=11]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/4.png" type="Texture" id=12]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Bite/4.png" type="Texture" id=13]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Bite/2.png" type="Texture" id=14]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Bite/3.png" type="Texture" id=15]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Bite/6.png" type="Texture" id=16]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Hit/1.png" type="Texture" id=17]
[ext_resource path="res://Entity/ClamBoss.gd" type="Script" id=18]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Opening/5.png" type="Texture" id=19]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Opening/2.png" type="Texture" id=20]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Opening/1.png" type="Texture" id=21]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Opening/4.png" type="Texture" id=22]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Opening/3.png" type="Texture" id=23]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Hit/5.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 21 ) ],
"loop": false,
"name": "close",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 19 ) ],
"loop": false,
"name": "open",
"speed": 10.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 7 ) ],
"loop": false,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": false,
"name": "shoot",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 16 ) ],
"loop": true,
"name": "bite",
"speed": 10.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 6 ), ExtResource( 19 ) ],
"loop": true,
"name": "hurt_open",
"speed": 10.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "close"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "close" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.4, 2.6, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pearl/PearlHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "eject_player"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("InsideClam/ClamInterior:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimationPlayer:playback_speed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.4, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 2.0, 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:collision_mask")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 35 ]
}

[sub_resource type="Animation" id=3]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hurt" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "hurt_open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hurt_open" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "increase_idle_count"
} ]
}

[sub_resource type="Animation" id=27]
resource_name = "idle_open"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "open" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "open" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ClosedShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OpenShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pearl/PearlHitbox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("InsideClam/ClamInterior:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:collision_mask")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("CloseTimer")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 5 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "shoot"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "shoot" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "close"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "hurt_open"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "idle_open"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "open"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachine" id=13]
states/close/node = SubResource( 17 )
states/close/position = Vector2( 1063, 259 )
states/hurt/node = SubResource( 18 )
states/hurt/position = Vector2( 754, 180 )
states/hurt_open/node = SubResource( 24 )
states/hurt_open/position = Vector2( 1236, 180 )
states/idle/node = SubResource( 8 )
states/idle/position = Vector2( 580, 259 )
states/idle_open/node = SubResource( 28 )
states/idle_open/position = Vector2( 1063, 180 )
states/open/node = SubResource( 9 )
states/open/position = Vector2( 900, 180 )
states/shoot/node = SubResource( 10 )
states/shoot/position = Vector2( 580, 95 )
transitions = [ "idle", "shoot", SubResource( 11 ), "shoot", "idle", SubResource( 12 ), "shoot", "hurt", SubResource( 19 ), "idle", "hurt", SubResource( 20 ), "hurt", "open", SubResource( 21 ), "close", "idle", SubResource( 22 ), "open", "idle_open", SubResource( 29 ), "idle_open", "hurt_open", SubResource( 30 ), "hurt_open", "idle_open", SubResource( 31 ), "idle_open", "close", SubResource( 32 ), "hurt", "idle", SubResource( 33 ), "hurt_open", "close", SubResource( 34 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 12, 12 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 40, 28 )

[node name="Boss" type="KinematicBody2D"]
z_index = 1
collision_layer = 0
collision_mask = 35
script = ExtResource( 18 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, -22 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "close"
frame = 4

[node name="ClosedShape" type="CollisionPolygon2D" parent="."]
position = Vector2( 3.97299, 3.1784 )
rotation = 1.5708
polygon = PoolVector2Array( -31.1784, 19.973, -15.1784, 41.973, -3.1784, 45.973, 16.8216, 45.973, 30.8216, 29.973, 30.8216, -22.027, 28.8216, -32.027, 16.8216, -46.027, 10.8216, -48.027, -3.1784, -48.027, -21.1784, -36.027, -31.1784, -16.027 )

[node name="OpenShape" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 8, -62, 50, -62, 64, -46, 64, -4, 52, 20, 34, 34, -24, 34, -42, 20, -42, 10, 38, 10, 38, -52, 2, -52, 2, -58 )
disabled = true

[node name="Pattern1" type="Node" parent="."]

[node name="FiringPoint" type="Position2D" parent="."]
position = Vector2( -37.4826, 5.03969 )
scale = Vector2( 0.5, 0.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 2 )
anims/hurt = SubResource( 3 )
anims/hurt_open = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/idle_open = SubResource( 27 )
anims/open = SubResource( 6 )
anims/shoot = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )

[node name="Pearl" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="PearlHitbox" type="CollisionShape2D" parent="Pearl"]
position = Vector2( 32, 2 )
shape = SubResource( 15 )
disabled = true

[node name="InsideClam" type="Area2D" parent="."]
collision_layer = 0

[node name="ClamInterior" type="CollisionShape2D" parent="InsideClam"]
position = Vector2( -2, -10 )
shape = SubResource( 16 )
disabled = true

[node name="CloseTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Pearl" to="." method="_on_Pearl_area_entered"]
[connection signal="body_entered" from="InsideClam" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="InsideClam" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="CloseTimer" to="." method="_on_CloseTimer_timeout"]
